--- a/angular-mvn-bower/src/main/resources/public/partials/index.html
+++ b/angular-mvn-bower/src/main/resources/public/partials/index.html
@@ -5,6 +5,16 @@
 	<h3>News</h3>
 </div>
 
+
+ <div class="col-md-10" >
+      <table ng-table-dynamic="tableParams with cols" class="table table-condensed table-bordered table-striped">
+        <tr ng-repeat="row in data">
+          <td ng-repeat="col in $columns">{{row[col.field]}}</td>
+        </tr>
+      </table>
+    </div>
+<p/>
+<!-- 
 <div ng-repeat="newsEntry in newsEntries">
 	<hr />
 	<div class="pull-right">
@@ -13,5 +23,5 @@
 	</div>
 	<h4>{{newsEntry.date | date}}</h4>
 	<p>{{newsEntry.content}}</p>
-</div>
+</div> -->
 <hr />
