modify ngtable, and delete persons

--- a/angular-mvn-bower/src/main/resources/public/partials/index.html
+++ b/angular-mvn-bower/src/main/resources/public/partials/index.html
@@ -6,6 +6,20 @@
 </div>
 
 
+<div class="row">
+    <div class="col-md-10" >
+      
+      <table ng-table="tableParams" class="table table-condensed table-bordered table-striped">
+        <tr ng-repeat="newsEntry in newsEntries">
+          <td data-title="'id'" sortable="'id'">{{newsEntry.id}}</td>
+          <td data-title="'content'" sortable="'content'">{{newsEntry.content}}</td>
+          
+          <td data-title="'eliminar'">          <a ng-click="deleteEntry(newsEntry)" class="btn btn-xs btn-default" ng-show="hasRole('ROLE_ADMIN')">Remove</a></td>
+		<td data-title="'editar'"><a href="#!/edit/{{newsEntry.id}}" class="btn btn-xs btn-default" ng-show="hasRole('ROLE_ADMIN')">Edit</a></td>
+        </tr>
+      </table>
+    </div>
+<div class="row">
  <div class="col-md-10" >
       <table ng-table-dynamic="tableParams with cols" class="table table-condensed table-bordered table-striped">
         <tr ng-repeat="row in data">
@@ -13,7 +27,8 @@
         </tr>
       </table>
     </div>
-<p/>
+    </div>
+    
 <!-- 
 <div ng-repeat="newsEntry in newsEntries">
 	<hr />
